--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     </div>
 
     <script>
-        const API_URL = "https://api.jsonbin.io/v3/b/673dd78dad19ca34f8cd2cb2/latest";
+        const API_URL = "https://api.jsonbin.io/v3/b/673ddd18acd3cb34a8abae21 /latest";
         const MASTER_KEY = "$2a$10$BrTwY0EMudslKQBXmQA2G.q40sFPkSQ44c.riid0nla5wU0.PuZoy";
         const ACCESS_KEY = "$2a$10$LyACMWgz7ZkpGYUpI9QeyespQHVCx4LTxef1UGtPrQwIhf4m11ZyK";
         let inventoryItems = [];
