--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     </div>
 
     <script>
-        const API_URL = "https://api.jsonbin.io/v3/b/673ddd18acd3cb34a8abae21 /latest";
+        const API_URL = "https://api.jsonbin.io/v3/b/673dddcbad19ca34f8cd2f9a/latest";
         const MASTER_KEY = "$2a$10$BrTwY0EMudslKQBXmQA2G.q40sFPkSQ44c.riid0nla5wU0.PuZoy";
         const ACCESS_KEY = "$2a$10$LyACMWgz7ZkpGYUpI9QeyespQHVCx4LTxef1UGtPrQwIhf4m11ZyK";
         let inventoryItems = [];
@@ -152,13 +152,13 @@
                         method: "GET",
                         headers: { "X-Access-Key": ACCESS_KEY },
                     });
-                    if (!response.ok) throw new Error("Erreur de chargement : " + response.status);
+                    if (!response.ok) throw new Error(`Erreur : ${response.status} - ${response.statusText}`);
                     const data = await response.json();
                     inventoryItems = data.record || [];
                     loadInventory();
                 } catch (error) {
-                    console.error("Erreur lors du chargement des données :", error);
-                    alert("Erreur lors de la connexion à l'inventaire. Veuillez vérifier votre bin JSONBin.");
+                    console.error("Erreur lors du chargement des données :", error.message);
+                    alert("Impossible de charger les données de l'inventaire. Vérifiez votre configuration JSONBin.");
                 }
             }
 
