--- a/index.html
+++ b/index.html
@@ -139,16 +139,16 @@
     </div>
 
     <script>
-        const API_URL = "https://api.jsonbin.io/v3/b/673dddcbad19ca34f8cd2f9a/latest";
-        const MASTER_KEY = "$2a$10$BrTwY0EMudslKQBXmQA2G.q40sFPkSQ44c.riid0nla5wU0.PuZoy";
-        const ACCESS_KEY = "$2a$10$LyACMWgz7ZkpGYUpI9QeyespQHVCx4LTxef1UGtPrQwIhf4m11ZyK";
+        const API_URL = "https://api.jsonbin.io/v3/b/673dddcbad19ca34f8cd2f9a";
+        const MASTER_KEY = "VOTRE_CLE_MASTER";
+        const ACCESS_KEY = "VOTRE_CLE_ACCESS";
         let inventoryItems = [];
         let itemToDelete = null;
 
         document.addEventListener("DOMContentLoaded", function () {
             async function loadFromJsonBin() {
                 try {
-                    const response = await fetch(API_URL, {
+                    const response = await fetch(`${API_URL}/latest`, {
                         method: "GET",
                         headers: { "X-Access-Key": ACCESS_KEY },
                     });
