--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
 
     <script>
         const API_URL = "https://api.jsonbin.io/v3/b/673dddcbad19ca34f8cd2f9a";
-        const MASTER_KEY = "VOTRE_CLE_MASTER";
-        const ACCESS_KEY = "VOTRE_CLE_ACCESS";
+        const MASTER_KEY = "$2a$10$BrTwY0EMudslKQBXmQA2G.q40sFPkSQ44c.riid0nla5wU0.PuZoy";
+        const ACCESS_KEY = "$2a$10$LyACMWgz7ZkpGYUpI9QeyespQHVCx4LTxef1UGtPrQwIhf4m11ZyK";
         let inventoryItems = [];
         let itemToDelete = null;
 
